# tauri-candle-vllm

./: .env  README.md  index.html  package.json
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  rig_client.rs
