[package]
name = "tauri-candle-vllm"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_candle_vllm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Side-car launcher helpers
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }

# Rig OpenAI client (front-end → Rust command)
rig-core = "0.13.0"
tauri-plugin-shell = "2"
reqwest = "0.12.19"
futures-util = "0.3.31"


